test_suite(
    name = "test",
    tests = [
        # "//namespaces/obazl/set100:test",
        "//namespaces/obazl/set200:test",
        # "//namespaces/obazl/set300:test",
        "//namespaces/obazl/set400:test",
        "//namespaces/obazl/set500:test",
        # "//namespaces/obazl/set600:test",
        # "//namespaces/obazl/set700:test"
    ]
)
