## OBSOLETE - mixed mode not supported

## ppx/mixed_mode - dependency graph contains a target (mixed_mode.ml)
## that must be built in both native and bytecode modes.

# $ bazel test ppx/mixed_mode:test
# $ bazel run ppx/mixed_mode:test

load(
    "@rules_ocaml//build:rules.bzl",
    "ocaml_module",
    "ocaml_test",
    "ocaml_module",
    "ppx_executable",
)

###########
ocaml_test(
    name = "test",
    main = "_Test"
)

ocaml_module(
    name   = "_Test",
    struct = "test.ml",
    opts = ["-w", "-27"],  ## Error (warning 27): unused variable test_ctxt.
    deps = [
        ":main",
        "@ounit2//:ounit2"
    ]
)

#############
ocaml_module(
    name = "main",
    struct = "main.ml",
    deps   = [":alpha"]
)

#############
ocaml_module(
    name = "alpha",
    ppx = ":ppx.exe",
    # ppx_print = "@ppx//print:text",
    struct = "alpha.ml",
    deps   = [":mixed_mode"]
)

############# this module is used as both a ppx and a non-ppx module
ocaml_module(
    name = "mixed_mode",
    struct = "mixed_mode.ml",
)

###############
ppx_executable(
    name = "ppx.exe",
    main = ":ppxlib_driver",
    deps = [":ppx_message"]
)

###########
ocaml_module(
    name      = "ppx_message",
    struct    = ":ppx_message.ml",
    opts = ["-linkall"],
    deps      = [
        ":mixed_mode",
        "@ppxlib//:ppxlib"
    ]
)

###########
ocaml_module(
    name = "ppxlib_driver",
    struct = ":ppxlib_driver.ml",
    opts   = ["-linkall"],
    deps = ["@ppxlib//:ppxlib"]
)

########
genrule(
    name = "gendriver",
    outs = ["ppxlib_driver.ml"],
    cmd = "\n".join([
        "echo \"(* GENERATED FILE - DO NOT EDIT *)\" > \"$@\"",
        "echo \"let () = Ppxlib.Driver.standalone ()\" >> \"$@\"",
    ]),
)
